moving index.html to root

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transactions Dashboard</title>
     <link rel="icon" href="https://img.icons8.com/?size=100&id=63915&format=png&color=000000" type="image/x-icon">
-    <link rel="stylesheet" href="./css/all.min.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./Frontend/src/css/all.min.css">
+    <link rel="stylesheet" href="./Frontend/src/css/main.css">
 </head>
 
 <body>
@@ -18,10 +18,10 @@
 
     </div>
 
-    <script src="./JavaScript/jquery-3.7.1.min.js"></script>
+    <script src="./Frontend/src/JavaScript/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
-    <script src="./JavaScript/index.js"></script>
+    <script src="./Frontend/src/JavaScript/index.js"></script>
 </body>
 
 </html>
